tests/errors/collections/list_overflow_indexing.sad
# list_overflow_indexing test
a = [1, 2]
risk {
    show(a[100000000000000000000000000000000000000])
} trap IndexOutOfBoundsError e {
    show(e.message)
}
